Updates to config

--- a/files/motion.conf
+++ b/files/motion.conf
@@ -109,13 +109,13 @@ emulate_motion off
 # Picture with most motion of an event is saved when set to 'best'.
 # Picture with motion nearest center of picture is saved when set to 'center'.
 # Can be used as preview shot for the corresponding movie.
-output_pictures on
+output_pictures best
 
 # Output pictures with only the pixels moving object (ghost images) (default: off)
 output_debug_pictures off
 
 # The quality (in percent) to be used by the jpeg compression (default: 75)
-quality 75
+quality 100
 
 # Type of output images
 # Valid values: jpeg, ppm (default: jpeg)
@@ -485,7 +485,7 @@ quiet on
 # Only put the options that are unique to each camera in the
 # thread config files.
 thread /etc/motion/motion_front.conf
-; thread /usr/local/etc/motion/thread2.conf
-; thread /usr/local/etc/motion/thread3.conf
+thread /etc/motion/motion_back.conf
+thread /etc/motion/motion_door.conf
 ; thread /usr/local/etc/motion/thread4.conf
 
